--- a/package.json
+++ b/package.json
@@ -6,22 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview_email": "email dev -p 3030"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.4.2",
+    "@react-email/components": "^0.0.7",
+    "bcrypt": "^5.1.1",
+    "fast-sort": "^3.4.0",
+    "next": "13.5.4",
+    "next-auth": "^4.23.2",
+    "next-cloudinary": "^4.25.0",
+    "prisma": "^5.4.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-email": "^1.9.5",
+    "resend": "^1.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "daisyui": "^3.9.2",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "typescript": "^5"
   }
 }
